--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family:"Pretendard", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -28,9 +28,9 @@ a:hover {
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
 }
 
-p, a, h1, h2, h3, h4, h5, label, button {
+p, a, h1, h2, h3, h4, h5, label, button, li {
   color: white;
-  font-family: "Lato", sans-serif;
+  font-family: "Pretendard", "Lato", sans-serif;
 }
 
 .navigation-bar {
@@ -39,7 +39,7 @@ p, a, h1, h2, h3, h4, h5, label, button {
 
   button {
     font-size: 1.1rem;
-    font-family: "Lato", sans-serif;
+    font-family: "Pretendard", "Lato", sans-serif;
     text-transform: initial;
     padding: 6px 10px;
   }
@@ -52,7 +52,7 @@ p, a, h1, h2, h3, h4, h5, label, button {
 .navigation-bar-responsive {
   span, p {
     color: #0d1116;
-    font-family: "Lato", sans-serif;
+    font-family: "Pretendard", "Lato", sans-serif;
   }
 }
 
@@ -99,7 +99,7 @@ p, a, h1, h2, h3, h4, h5, label, button {
     background-color: #f8f9fa;
   }
 
-  p, a, h1, h2, h3, h4, h5, label, button {
+  p, a, h1, h2, h3, h4, h5, label, button, li {
     color: #0d1116;
   }
 
